--- a/assets/html/chunk/hero.html
+++ b/assets/html/chunk/hero.html
@@ -1,5 +1,12 @@
-<section class="section">
+<section class="hero">
 	<div class="container">
-
+		<div class="hero__block">
+			<div class="hero__wrap">
+				<h1 class="hero__title">Я - фронтендор</h1>
+				<p class="hero__text">Какая-то очень интересная информация обо мне. Очень интересная информация...</p>
+				<button class="hero__btn btn-reset">Связаться со мной</button>
+			</div>
+			<img class="hero__img" src="img/hero/hero-img.png" alt="Аватар">
+		</div>
 	</div>
 </section>
