--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -5,17 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link type="image/png" href="favicon/favicon.png" rel="shortcut icon" />
 
+
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<meta name="theme-color" content="#111111" />
 		<title>Frontend-profile</title>
 		<link href="css/styles.min.css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Montserrat:wght@800&display=swap" rel="stylesheet">
+
 	</head>
 
 	<body>
 		<div class="site-container">
 			@include('../components/header/header.html')
 			<main class="main">
-				@include('chunk/hero.html')
 			</main>
 			@include('chunk/footer.html')
 		</div>
