--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -18,6 +18,8 @@
 		<div class="site-container">
 			@include('../components/header/header.html')
 			<main class="main">
+				@include('chunk/hero.html')
+				@include('chunk/ability.html')
 			</main>
 			@include('chunk/footer.html')
 		</div>
