Сверстал секцию projects

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -20,6 +20,7 @@
 			<main class="main">
 				@include('chunk/hero.html')
 				@include('chunk/ability.html')
+				@include('chunk/projects.html')
 			</main>
 			@include('chunk/footer.html')
 		</div>
