Сверстал секцию Contacts

--- a/assets/html/chunk/ability.html
+++ b/assets/html/chunk/ability.html
@@ -1,7 +1,7 @@
 <section class="ability">
 	<div class="container">
 		<h2 class="ability__title">Я умею</h2>
-		<div class="ability__blocks">
+		<div class="ability__wrap">
 				<button class="ability__btn btn-reset">HTML</button>
 				<button class="ability__btn btn-reset">CSS</button>
 				<button class="ability__btn btn-reset">JS</button>
