--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -21,6 +21,7 @@
 				@include('chunk/hero.html')
 				@include('chunk/ability.html')
 				@include('chunk/projects.html')
+				@include('chunk/contacts.html')
 			</main>
 			@include('chunk/footer.html')
 		</div>
