сверстал подвал, правки и подключил шрифты

--- a/assets/html/chunk/hero.html
+++ b/assets/html/chunk/hero.html
@@ -1,10 +1,10 @@
-<section class="hero">
+<section class="hero" id="hero">
 	<div class="container">
 		<div class="hero__block">
 			<div class="hero__wrap">
 				<h1 class="hero__title">Я - фронтендор</h1>
 				<p class="hero__text">Какая-то очень интересная информация обо мне. Очень интересная информация...</p>
-				<button class="hero__btn btn-reset">Связаться со мной</button>
+				<a class="hero__btn link-reset" href="#contacts">Связаться со мной</a>
 			</div>
 			<img class="hero__img" src="img/hero/hero-img.png" alt="Аватар">
 		</div>
