--- a/assets/html/chunk/footer.html
+++ b/assets/html/chunk/footer.html
@@ -1,5 +1,22 @@
 <footer class="footer">
 	<div class="container">
-
+		<div class="footer__wrap">
+			<a class="footer__logo logo link-reset" href="#"> @nickname</a>
+			<div class="footer__menu footer-menu">
+				<nav class="footer-menu__body">
+					<ul class="footer-menu__list list-reset">
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#projects" data-goto=".section-1">Мои работы</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#hero" data-goto=".section-2">Обо мне</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#contacts" data-goto=".section-3">Контакты</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 	</div>
 </footer>
