--- a/assets/html/chunk/projects.html
+++ b/assets/html/chunk/projects.html
@@ -1,4 +1,4 @@
-<section class="projects">
+<section class="projects" id="projects">
 	<div class="container">
 		<h2 class="projects__title">Мои проекты</h2>
 			<div class="projects__block">
