Правки на главной секции

--- a/assets/html/chunk/hero.html
+++ b/assets/html/chunk/hero.html
@@ -3,7 +3,7 @@
 		<div class="hero__block">
 			<div class="hero__wrap">
 				<h1 class="hero__title">Я - фронтендор</h1>
-				<p class="hero__text">Какая-то очень интересная информация обо мне. Очень интересная информация...</p>
+				<p class="hero__text">Какая-то не очень интересная информация обо мне. Очень интересная информация...</p>
 				<a class="hero__btn link-reset" href="#contacts">Связаться со мной</a>
 			</div>
 			<img class="hero__img" src="img/hero/hero-img.png" alt="Аватар">
